# tpDcc-libs-datalibrary

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
tests/: test_data.py  test_general.py  test_library.py  test_transfer.py
tpDcc/libs/datalibrary/: __init__.py  __logging__.ini  __version__.py  _version.py  loader.py
tpDcc/libs/datalibrary/core/: __init__.py  base.py  consts.py  data.py  dataitem.py  datalib.py  datapart.py  exceptions.py  factory.py  item.py  lib.py  mirrortable.py  scanner.py  settings.py  transfer.py  utils.py  version.py
tpDcc/libs/datalibrary/data/: explorer.py  fbx.py  file.py  folder.py  image.py  jpg.py  mirrortable.py  obj.py  png.py  python.py  scripts.py  text.py  tga.py  transforms.py
tpDcc/libs/datalibrary/example/: dino.db  main.py
tpDcc/libs/datalibrary/items/: group.py
tpDcc/libs/datalibrary/managers/: data.py
tpDcc/libs/datalibrary/plugins/: filescanner.py
tpDcc/libs/datalibrary/sql/: add_with_fields.sql  create.sql  dependencies_get.sql  dependencies_uuid_get.sql  dependency_add.sql  field_names_get.sql  fields_get.sql  find.sql  find_all_uuids.sql  find_fields.sql  find_from_uuid.sql  find_id.sql  find_uuid.sql  metadata_get.sql  metadata_set.sql  move.sql  remove.sql  rename.sql  tag_connect.sql  tags_add.sql  thumb_get.sql  thumb_set.sql  version_add.sql  version_last_get.sql  versions_get.sql
tpDcc/libs/datalibrary/transfer/: mirrortable.py
tpDcc/libs/datalibrary/widgets/: listview.py  load.py  preview.py  save.py  search.py  sidebar.py  treeview.py  viewer.py  window.py
(+32 files in other folders)
